fixed the spacing of the timeHud component

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,6 @@ body {
   max-width: 1440px;
   max-height: 100vh;
   overflow-x: hidden;
-  /*overflow-y: hidden;*/
+  overflow-y: hidden;
   margin: 0 auto;
 }
