--- a/src/timeHud/timeHud.css
+++ b/src/timeHud/timeHud.css
@@ -1,7 +1,7 @@
 .time-hud {
     position: relative;
     top: -137.45rem;
-    left: 44.8rem;
+    left: 45.3rem;
 }
 
 .time-hud svg {
